Connection successful. Still have issues when the SSID has two names separated with spaces.